fix(hamburger): color change happens only on mobile

--- a/app/styles/index.css
+++ b/app/styles/index.css
@@ -45,7 +45,7 @@ body {
     }
   }
 
-  @media screen and (max-width: 720px) {
+  @media screen and (max-width: 719px) {
     .hamburgerMenu-nav-show-svg > svg {
       color: white;
     }   
